# weiser-ai

./: .env_example  .gitignore  404.html  CLAUDE.md  CNAME  README.md  alembic.ini  docker-compose-duckdb-minio.yaml  docker-compose-postgres.yaml  docker-compose.yaml  export_pdm.sh  index.html  metricstore.db  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  test_bigquery_basic.py
.github/workflows/: docs.yaml  publish.yaml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_metrics_table.py  20250711_184641_add_tenant_id_column_to_metrics_table.py
assets/css/: styles.b89cfd33.css
assets/js/: 0058b4c6.b6c08b4b.js  0058b4c6.c4586258.js  0e384e19.110e3b6b.js  0e384e19.5d0b2d2a.js  0e384e19.db1d49cc.js  17896441.5ee37c8f.js  1f391b9e.5a51384a.js  22fbeb1c.3c67b714.js  341.bbe76aa2.js  393be207.ac4791c0.js  393be207.f8f79702.js  42.e00b3e5b.js  4c118d7e.cac089f4.js  5e0e260f.29ae0e74.js  5e0e260f.3018662a.js  5e0e260f.c2280222.js  5e0e260f.f62dbfe1.js  5e95c892.a18eb2bf.js  75fe60ef.162b6080.js  9ed00105.a89edc46.js  9ed00105.b233b39b.js  a5a6afe9.facbd13b.js  a94703ab.5082da29.js  b192b259.a2eb6574.js  b2a30b11.92f2d496.js  b5ce0f76.ecb5f0fb.js  b64540ae.01598584.js  b64540ae.b8667ffc.js  b64540ae.bbcbf6ad.js  b64540ae.d43e81b3.js  c4f5d8e4.65e57b86.js  c4f5d8e4.9dfb1622.js  c4f5d8e4.c3125688.js  c4f5d8e4.cd702201.js  c4f5d8e4.f82455a5.js  c917c584.9b42f9b9.js  ce46aa1f.8a69c93b.js  da2f0a4c.d3e641a6.js  f8f3159e.05cf0818.js  main.1a653eb2.js  (+12 more)
docs/check-types/: index.html
docs/check-types/anomaly/: index.html
docs/check-types/max/: index.html
docs/check-types/measure/: index.html
docs/check-types/min/: index.html
docs/check-types/not-empty/: index.html
docs/check-types/not-empty-pct/: index.html
docs/check-types/numeric/: index.html
docs/check-types/row-count/: index.html
docs/check-types/sum/: index.html
docs/configuration/: index.html
docs/datasources/: index.html
docs/intro/: index.html
docs/tutorial/getting-started/: index.html
docusaurus/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docusaurus/docs/: configuration.md  datasources.md  intro.md
docusaurus/docs/check-types/: anomaly.md  index.md  max.md  measure.md  min.md  not-empty-pct.md  not-empty.md  numeric.md  row-count.md  sum.md
examples/: .gitignore  cube_example.yaml  databricks.yml  datasources-examples.yaml  example.yaml  postgres-duckdb.yml  postgres.yaml  snowflake.yaml  structure.sql
examples/proxy/: README.md
markdown-page/: index.html
metricstore/model/: Metrics.yaml  events.yml  subscriptions.yml
metricstore/schema/: Metrics.yaml
tests/: conftest.py  test_basic.py
tests/fixtures/: config_fixtures.py
tests/integration/: test_bigquery_basic.py  test_full_workflow.py
tests/unit/: test_base_check.py  test_checks.py  test_config.py  test_datasource_models.py  test_discriminated_datasources.py  test_drivers.py  test_runner.py
weiser/: main.py
weiser-ui/: app.py  index.html  package-lock.json  package.json  requirements.txt
weiser-ui/pages/: index.md
weiser-ui/src/: App.css  App.tsx  Layout.tsx
weiser/checks/: __init__.py  anomaly.py  base.py  numeric.py
weiser/drivers/: __init__.py  base.py  bigquery.py  databricks.py  mysql.py  postgres.py  snowflake.py
weiser/loader/: __init__.py  config.py  export.py  models.py
weiser/runner/: __init__.py
(+23 files in other folders)
