
[project]
name = "weiser-ai"
version = "0.1.7"
description = "Data Quality powered by AI"
authors = [
    {name = "Paco Valdez", email = "paco.valdez@berkeley.edu"},
]
dependencies = [
    "typer[all]>=0.9.0",
    "sqlglotrs==0.1.0",
    "pydantic>=2.5.3",
    "SQLAlchemy==2.0.32",
    "duckdb>=0.9.2",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "psycopg2>=2.9.5",
    "pandas>=2.2.2",
    "boto3>=1.35.49",
    "sqlglot==20.5.0",
    "pyyaml==6.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
weiser = "weiser.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
